# parse-android-dynparts

./: CMakeLists.txt  README.md  main.cpp
liblp/: CMakeLists.txt  README.md  reader.cpp  utility.cpp  utility.h
liblp/include/liblp/: liblp.h
